# EZR-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindAssimp.cmake
resources/: cvark.blend  cvark_singlemesh.dae  sphere.dae  suzanne.dae  teapot.dae  torus.dae  zwark.dae
resources/Nils_Material_CleanUp/: [1.5] ContourShader.geom  [1.5] ContourShader.vert  [1.5] ContourShader_writeDepth.frag  [1] SplitVertexNeighborData  [1] VertexNeighbourList_noCopy_duplicates.geom  [2] gradient_duplicated_neighbors.vert
resources/demo_scene/: demo_scene.blend  demo_scene.dae
src/executables/: demo_ambient_occlusion.cpp  demo_antialiasing.cpp  demo_assetloader.cpp  demo_atomiccounter.cpp  demo_computeshader.cpp  demo_cubemap.cpp  demo_lighting.cpp  demo_medcv.cpp  demo_memoryallocation.cpp  demo_shadowmapping.cpp  demo_sloan.cpp  demo_ssbo.cpp  demo_toon.cpp
src/libraries/AntiAliasing/: MLAA.cpp  MLAA.h
src/libraries/Exceptions/: ShaderException.cpp  ShaderException.h
src/libraries/FBO/: Cubemap.cpp  Cubemap.h  FBO.cpp  FBO.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  stb_image.h
src/libraries/IMGUI/: imgui_impl_glfw_gl3.cpp
src/libraries/IO/: Camera.cpp  Camera.h  Window.cpp  Window.h
src/libraries/Renderables/: Cube.cpp  Cube.h  Quad.cpp  Quad.h  Renderable.cpp  Renderable.h
src/libraries/SSBO/: AtomicCounter.cpp  AtomicCounter.h  SSBO.cpp  SSBO.h
src/libraries/Shaders/: ComputeShader.cpp  ComputeShader.h  SimpleShader.cpp  SimpleShader.h
src/libraries/Utils/: CollectionsUtils.cpp  CollectionsUtils.h  ShaderUtils.cpp  ShaderUtils.h  TextureToViewportRenderer.cpp  TextureToViewportRenderer.h  TextureUtils .cpp  TextureUtils.h  assets.cpp  assets.h  debug.cpp  debug.h  paths.cpp  paths.h
src/shaders/AmbientOcclusion/: SSAO.frag  blur.frag
src/shaders/AntiAliasing/: Experimental00.frag  FXAA.frag  Median.frag
src/shaders/AntiAliasing/MLAA/: MLAA00.frag  MLAA01.frag  MLAA02.frag
src/shaders/ComputeShader/Test/: computeShaderTest.comp  computeShaderTest_img2D.comp
src/shaders/Cubemap/: localCubemap.frag  simpleCubemap.frag
src/shaders/GBuffer/: GBuffer.frag  GBuffer_tex.frag  simplePass.vert  simpleTexture.frag  simpleTextureArray.frag  simpleTransform.vert
src/shaders/Lighting/: Beautiful.frag
src/shaders/Misc/: add.frag  multiply.frag
src/shaders/PostProcessing/GameBoy/: gameboy.frag
src/shaders/RimLight/: GBuffer.frag  simpleRimLight.frag
src/shaders/SSBO_test/: atomicShader.frag  imageArrayShader.frag  simpleTexture_ssboWrite.frag  simpleTransform_ssboRead.vert
src/shaders/SSR/: oldSSR.frag  ssr.frag  ssr.vert  ssrDraw.frag
src/shaders/ShadowMapping/: pcfAndPoissonShadowMap.frag  pcfShadowMap.frag  pcfShadowMap_advanced.frag  poissonShadowMap.frag  shadowDraw.frag  simpleShadowMap.frag
src/shaders/Sloan/: sloan.frag
src/shaders/Toon/: outLine.frag  outLine.vert  simpleTransformFat.vert  sobel.frag  sobel.vert  toon.frag
src/shaders/medcv/: simpleTexture.frag  simpleTransform.vert
src/shaders/medcv/01/: neighborSearch.frag  neighborSearch.geom  neighborSearch.vert
src/shaders/medcv/02/: contourDepth.frag  contourDepth.geom  contourDepth.vert
src/shaders/medcv/03/: computeGradient.frag  computeGradient.vert
src/shaders/medcv/04/: deriveGradient.frag  deriveGradient.vert
src/shaders/medcv/05/: prepareLIC.frag  prepareLIC.geom  prepareLIC.vert
src/shaders/medcv/06/: LIC.frag  LIC.vert
src/shaders/medcv/07/: connectLine.frag  lineConnection .frag
src/shaders/test_shaders/: rimlight.frag  simple_color.frag  simple_tex.frag  single_transform.vert
